--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Noto Sans JP', sans-serif;
+}
 
 header, main, nav, footer {
     text-align: center;
@@ -11,6 +14,10 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #434448;
+}
+
+span {
+    color: yellow;
 }
 
 #page_title {
@@ -27,7 +34,12 @@ body {
 }
 
 .navbar a:hover {
-    color: orange;
+    color: yellow;
+    opacity: 60%;
+}
+
+.navbar a:active {
+    color: yellow;
 }
 
 .content {
@@ -39,12 +51,12 @@ body {
     display: flex;
     border: black solid;
     border-radius: 10px;
-    width: 800px;
+    max-width: 1000px;
     margin: 45px auto;
 }
 
 .card_container img {
-    width: 150px;
+    width: 160px;
     padding: 10px;
 }
 
@@ -59,11 +71,23 @@ body {
     width: 100px;
     height: 30px;
     margin: 10px auto;
+    border: yellow solid;
+    border-radius: 30px;
+    background-color: #434448;
+    color: white;
+    font-weight: 700;
+}
+
+.card button:hover {
+    cursor: pointer;
+    background-color: rgb(90,90,90);
+    transition: 0.3s;
 }
 
 .card p {
     padding: 6px 6px 6px 30px;
     font-size: 1.2em;
+    font-weight: 300;
     color: white;
 }
 
@@ -86,6 +110,6 @@ footer .text_container {
     flex-direction: column;
     margin-top: auto;
     margin-bottom: auto;
-    font-weight: 300;
+    font-weight: 100;
     color: darkgrey;
 }
