--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ span {
     text-align: center;
     color: white;
     font-size: 2.5em;
+    text-shadow: 2px 2px black;
 }
 
 .navbar a {
@@ -31,6 +32,7 @@ span {
     color: white;
     padding: 10px;
     font-size: 1.4em;
+    text-shadow: 2px 2px black;
 }
 
 .navbar a:hover {
@@ -49,10 +51,11 @@ span {
 
 .card_container{
     display: flex;
-    border: black solid;
+    border: #262626 double;
     border-radius: 10px;
     max-width: 1000px;
     margin: 45px auto;
+    box-shadow: 8px 8px #5c5d62;
 }
 
 .card_container img {
