--- a/css/style.css
+++ b/css/style.css
@@ -1,168 +1,197 @@
 * {
-    font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
-header, main, nav, footer {
-    text-align: center;
+header,
+main,
+nav,
+footer {
+  text-align: center;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: #434448;
-    margin: 0;
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  background-color: #434448;
 }
 
 span {
-    color: #F0DB4F;
+  color: #F0DB4F;
 }
 
 #page_title {
-    text-align: center;
-    color: white;
-    font-size: 2.5em;
-    text-shadow: 2px 2px black;
+  text-align: center;
+  color: white;
+  font-size: 2.5em;
+  text-shadow: 2px 2px black;
 }
 
 .navbar a {
-    text-decoration: none;
-    color: white;
-    padding: 10px;
-    font-size: 1.4em;
-    text-shadow: 2px 2px black;
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  font-size: 1.4em;
+  text-shadow: 2px 2px black;
 }
 
 .navbar a:hover {
-    color: #F0DB4F;
-    opacity: 60%;
+  color: #F0DB4F;
+  opacity: 60%;
 }
 
 .content {
-    margin: 30px;
-    flex: 1 0 auto;
+  margin: 30px;
+  flex: 1 0 auto;
 }
 
-.card_container{
-    display: flex;
-    border: #262626 double;
-    border-radius: 10px;
-    max-width: 1000px;
-    margin: 45px auto;
-    box-shadow: 8px 8px #5c5d62;
+.card_container {
+  display: flex;
+  border: #262626 double;
+  border-radius: 10px;
+  max-width: 1000px;
+  margin: 45px auto;
+  box-shadow: 8px 8px #5c5d62;
+}
+
+.about_card_container {
+  display: flex;
+  border: #262626 double;
+  border-radius: 10px;
+  max-width: 1000px;
+  margin: 45px auto;
+  box-shadow: 8px 8px #5c5d62;
+  justify-content: center;
 }
 
 .card_container img {
-    max-width: 160px;
-    padding: 10px;
+  max-width: 160px;
+  padding: 10px;
 }
 
-.card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 800px;
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 800px;
+}
+
+.about_card {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .card button {
-    width: 100px;
-    height: 30px;
-    margin: 10px auto;
-    border: #F0DB4F solid;
-    border-radius: 30px;
-    background-color: #434448;
-    color: white;
-    font-weight: 700;
+  width: 100px;
+  height: 30px;
+  margin: 10px auto;
+  border: #F0DB4F solid;
+  border-radius: 30px;
+  background-color: #434448;
+  color: white;
+  font-weight: 700;
 }
 
 .card button:hover {
-    cursor: pointer;
-    background-color: rgb(90,90,90);
-    transition: 0.3s;
+  cursor: pointer;
+  background-color: rgb(90, 90, 90);
+  transition: 0.3s;
 }
 
 .card p {
-    padding: 6px 6px 6px 30px;
-    font-size: 1.2em;
-    font-weight: 300;
-    color: white;
+  padding: 6px 6px 6px 30px;
+  font-size: 1.2em;
+  font-weight: 300;
+  color: white;
+}
+
+.about_card p {
+  padding: 6px 6px 6px 6px;
+  font-size: 1.2em;
+  font-weight: 300;
+  color: white;
 }
 
 .footer {
-    flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 .footer img {
-    width: 100px;
-    padding: 10px 15px 10px 10px;
+  width: 100px;
+  padding: 10px 15px 10px 10px;
 }
 
 footer .container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 footer .text_container {
-    display: flex;
-    flex-direction: column;
-    margin-top: auto;
-    margin-bottom: auto;
-    font-weight: 100;
-    color: darkgrey;
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-weight: 100;
+  color: darkgrey;
 }
 
 .article_container {
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-size: 1.2em;
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: 1.2em;
 }
 
 .left_column {
-    width: 20rem;
+  width: 20rem;
 }
 
 .left_column img {
-    max-width: 280px;
+  max-width: 280px;
 }
 
 .right_column img {
-    max-width: 280px;
+  max-width: 280px;
 }
 
-.article, .references{
-    width: 50rem;
-    padding: 20px 20px 0 20px;
+.article,
+.references {
+  width: 50rem;
+  padding: 20px 20px 0 20px;
 }
 
-.article h2, .references h2{
-    text-shadow: 2px 2px black;
+.article h2,
+.references h2 {
+  text-shadow: 2px 2px black;
 }
 
 .right_column {
-    width: 20rem;
-    align-self: flex-end;
+  width: 20rem;
+  align-self: flex-end;
 }
 
-#sources a{
-    color: #F0DB4F;
+#sources a {
+  color: #F0DB4F;
 }
 
 #sources a:visited {
-    color: #F0DB4F;
-    opacity: 80%;
+  color: #F0DB4F;
+  opacity: 80%;
 }
 
 #sources a:hover {
-    color: #F0DB4F;
-    opacity: 50%;
+  color: #F0DB4F;
+  opacity: 50%;
 }
 
 .caption {
-    font-size: .7em;
-    margin-top: 0;
-    text-align: center;
+  font-size: .7em;
+  margin-top: 0;
+  text-align: center;
 }
